# oldest-supported-numpy

./: setup.cfg
