[metadata]
name = oldest-supported-numpy
description = Meta-package that provides the oldest NumPy that supports a given Python version and platform. If wheels for the platform became available on PyPI only for a more recent NumPy version, then that NumPy version is specified.
long_description = file: README.rst
author = Thomas Robitaille
author_email = thomas.robitaille@gmail.com
license = BSD
url = https://github.com/scipy/oldest-supported-numpy
version = 2023.08.03

# The Numpy pinnings below have been adapted from those in the
# SciPy package, which is released under a 3-clause BSD license:
# https://github.com/scipy/scipy/blob/master/LICENSE.txt

[options]
python_requires = >=3.7
install_requires =
    numpy==1.22.4
